B-F Sandbox Full-Backup/src/objects/OV_Location_Data__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Translated_Name__c</fullName>
        <label>Translated Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Outlet Visit Location Data</label>
</CustomObject>